--- a/blog/templates/blog/booking.html
+++ b/blog/templates/blog/booking.html
@@ -37,34 +37,31 @@
                                  </a>
                              </li>
                     {% endif %}
-
-                    {% if profile.category == 'patient' %}
-
-                    <li>
-                      <a href="{% url 'blog.blog' %}" class="flex flex-row items-center h-12 transform hover:translate-x-2 transition-transform ease-in duration-200 text-gray-500 hover:text-gray-800">
-                                 <span class="inline-flex items-center justify-center h-12 w-12 text-lg text-gray-400"><i class="bx bx-book"></i></span>
-                                 <span class="text-sm font-medium">Blogs</span>
-                             </a>
-                         </li>
-                         
-
-                    {% endif %}
-
-                    <li>
+                       
+                           
+                {% if user.is_authenticated %}
+                <li>
+                  <a href="{% url 'blog.blog' %}" class="flex flex-row items-center h-12 transform hover:translate-x-2 transition-transform ease-in duration-200 text-gray-500 hover:text-gray-800">
+                             <span class="inline-flex items-center justify-center h-12 w-12 text-lg text-gray-400"><i class="bx bx-book"></i></span>
+                             <span class="text-sm font-medium">Blogs</span>
+                         </a>
+                     </li>
+                     <li>
                       <a href="{% url 'blog.appointment' %}" class="flex flex-row items-center h-12 transform hover:translate-x-2 transition-transform ease-in duration-200 text-gray-500 hover:text-gray-800">
                                  <span class="inline-flex items-center justify-center h-12 w-12 text-lg text-gray-400"><i class="bx bx-grid"></i></span>
                                  <span class="text-sm font-medium">My Appointments</span>
                              </a>
                          </li>
-                       
-                           
-                {% if user.is_authenticated %}
+
                 <li>
                     <a href="{% url 'blog.profile' %}" class="flex flex-row items-center h-12 transform hover:translate-x-2 transition-transform ease-in duration-200 text-gray-500 hover:text-gray-800">
                                <span class="inline-flex items-center justify-center h-12 w-12 text-lg text-gray-400"><i class="bx bx-user"></i></span>
                                <span class="text-sm font-medium">{{profile.username}}</span>
                            </a>
                        </li>
+
+                 <li>
+                  
 
                  <li>
 
@@ -79,11 +76,11 @@
          </div>
      </div>
         <div class="flex flex-shrink-0 mt-6 flex-grow">
-          
+            <!-- Add your new div here -->
             <div class="w-full " style="margin-top: 20px; margin-left: 4rem;">
                 <div class="flex justify-between items-center">
                     <div class="flex items-center">
-                        <div class="font-serif font-semibold text-3xl ml-14">Blogs</div>
+                        <div class="font-serif font-semibold text-3xl ml-14">Book Your Appointment</div>
                     </div>
 
                     {% if profile.category == 'doctor' %}
@@ -98,105 +95,74 @@
                 {% endif %}
                 </div>
                 <div class="flex mt-5">
-                    <div class="flex-row ml-14 overflow-y-auto hide-scrollbar"  style="width: 40vw; height: 80vh; ">
 
-                    {% for blog in blogs %}
-                   
-                    
-                    <a href="{% url 'blog.detail-blog' %}?id={{blog.id}}" >
-                        <div class="flex flex-col gap-3 sm:gap-5 rounded cursor-pointer mt-10 " style="width: 40vw;">
-                          <div class="mb-3">
-                            <img
-                              src='{{blog.image.url}}'
-                              style="width: 40vw; height: 45vh;"
-                              alt="image"
-                              class="object-contain sm:object-cover object-top w-full sm:h-72 md:h-60 rounded"
-                            />
-                          </div>
-                  
-                          <div>
-                            <p class="text-m font-[500] text-[#7c7c7c]">
-                              {{blog.category}}
-                            </p>
-                            <h2 class="sm:text-xl font-semibold">
-                              <a href="{% url 'blog.detail-blog' %}?id={{blog.id}}"> {{blog.title}} </a>
-                            </h2>
-                          </div>
-                  
-                          <div class="flex items-center gap-2">
-                            <div>
-                              <img
-                                src="{{profile.image.url}}"
-                                width= "40"
-                                height="40"
-                                alt="hee"
-                                class="cursor-pointer object-cover object-top rounded-full"
-                              />
-                            </div>
-                            <div>
-                              <p class="cursor-pointer text-sm font-[500]">
-                                {{profile.firstName }} {{profile.lastName}}
-                              </p>
-                              <div className="flex items-center gap-1 mt-1">
-                                <p className="text-[#7c7c7c] text-sm">{{blog.created_at}}
-                                </p>
-                              </div>
-                            </div>
-                            {% if blog.drafted == false %}
-                            <div class="center relative inline-block select-none whitespace-nowrap rounded-lg bg-amber-500 py-2 px-3.5 align-baseline font-sans text-xs font-bold uppercase leading-none text-black">
-                                <div class="mt-px">Drafted</div>
-                              </div>
-                            {% endif %}
-                          </div>
-                  
-                          <div>
-                            <p class="text-sm sm:text-base">{{ blog.summary}}</p>
-                          </div>
-                          <a
-                            href="{% url 'blog.detail-blog' %}?id={{blog.id}}"
-                            class="block w-fit capitalize rounded-full font-[500] text-indigo-500 hover:text-indigo-600"
-                          >
-                            <span className="flex items-center gap-1 text-sm sm:text-base hover:gap-2 transition-all">
-                              read more
-                            </span>
-                        </a>
+
+                    <div class="flex-row ml-14 overflow-y-auto hide-scrollbar"  style="width: 40vw; height: 80vh; ">
+                        <div class="my-5 flex items-center justify-between">
+                        
                         </div>
-                    </a>
-                    {% endfor %}
+
+                        {% for doctor in doctors %}
+
+                        <div class="sm:w-full mb-4 bg-white p-6 border-b border-t border-[#d4d4d4] hover:border hover:border-gray-300 hover:shadow-lg ">
+                          <div class="flex items-center justify-between">
+                            <div class="flex items-center">
+                              <img class="mr-2 h-14 w-14 rounded-full object-cover" src="{{doctor.image.url}}" alt="profile" />
+                              <div>
+                                <h3 class="text-base font-semibold text-gray-900">Dr. {{doctor.firstName}} {{doctor.lastName}}</h3>
+                               
+                              </div>
+                            </div>
+                            <a href="{% url 'blog.create-appointment' %}?id={{doctor.id}}">
+                            <button type="button" class="text-white bg-gradient-to-r from-blue-500 via-blue-600 to-blue-700 hover:bg-gradient-to-br focus:ring-4 focus:outline-none focus:ring-blue-300 dark:focus:ring-blue-800 font-medium rounded-lg text-sm px-5 py-2.5 text-center me-2 mb-2">Book an Appointment</button>
+                          </a>
+                          </div>
+                          <div class="mt-6 flex items-center justify-between text-sm font-semibold text-gray-900">
+                            <div class="flex">
+                              <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="mr-2 h-5 w-5 text-base text-gray-500">
+                                <path stroke-linecap="round" stroke-linejoin="round" d="M6 6.878V6a2.25 2.25 0 012.25-2.25h7.5A2.25 2.25 0 0118 6v.878m-12 0c.235-.083.487-.128.75-.128h10.5c.263 0 .515.045.75.128m-12 0A2.25 2.25 0 004.5 9v.878m13.5-3A2.25 2.25 0 0119.5 9v.878m0 0a2.246 2.246 0 00-.75-.128H5.25c-.263 0-.515.045-.75.128m15 0A2.25 2.25 0 0121 12v6a2.25 2.25 0 01-2.25 2.25H5.25A2.25 2.25 0 013 18v-6c0-.98.626-1.813 1.5-2.122" />
+                              </svg>
+                              <span class="mr-1">Available</span>
+                            </div>
+                            <div class="flex items-center">
+                              <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="mr-1 h-5 w-6 text-yellow-500">
+                                <path stroke-linecap="round" stroke-linejoin="round" d="M11.48 3.499a.562.562 0 011.04 0l2.125 5.111a.563.563 0 00.475.345l5.518.442c.499.04.701.663.321.988l-4.204 3.602a.563.563 0 00-.182.557l1.285 5.385a.562.562 0 01-.84.61l-4.725-2.885a.563.563 0 00-.586 0L6.982 20.54a.562.562 0 01-.84-.61l1.285-5.386a.562.562 0 00-.182-.557l-4.204-3.602a.563.563 0 01.321-.988l5.518-.442a.563.563 0 00.475-.345L11.48 3.5z" />
+                              </svg>
+                              4,7 (750 Reviews)
+                            </div>
+                          </div>
+                        </div>
+
+                        {% endfor %}
+                     
                     </div>
+
+                   
                     <div class="bg-[#f7f7f7] text-[#1d1e20] rounded-lg p-8 py-6 mr-12 mt-9  md:h-7/10 lg:h-3/5 " style="position: absolute; right: 1rem; width: 24vw; ">
                     <h2 class="mb-8 pb-3 text-lg font-semibold border-b border-[#d4d4d4]">
-                      Categories
+                      Upcomming Appointments
                     </h2>
                     <div>
                         
                       <ul class="flex flex-col space-y-5">
-                          
+                        {% for appointment in appointments %}
                             <li class="border-b border-[#d4d4d4] pb-2 mt-1 text-lg hover:text-indigo-500">
-                                <a href="{% url 'blog.home' %}?category=Mental Health">
-                                    Mental Health
-                                </a>
+                              <div class="flex justify-between">
+                                <div>
+                                    <p class="">Dr. {{appointment.doctor.profile.firstName}} {{appointment.doctor.profile.lastName}}</p>
+                                    <p class="">{{appointment.start_date}}</p>
+                                </div>
+                                <div>
+                                  <p class="text-lg ">Start - {{appointment.start_time}}</p>
+                                  <p class="">End - {{appointment.end_time}}</p>
+                                </div>
+                               
+                            </div>
                              
                             </li>
-                            <li class="border-b border-[#d4d4d4] pb-2 mt-1 text-lg hover:text-indigo-500">
-                                <a href="{% url 'blog.home' %}?category=Heart Disease">
-                                   Heart Disease
-                                </a>
-                             
-                            </li>
-                            <li class="border-b border-[#d4d4d4] pb-2 mt-1 text-lg hover:text-indigo-500">
-                                <a href="{% url 'blog.home' %}?category=Covid 19">
-                                    Covid 19
-                                </a>
-                             
-                            </li>
-                            <li class="border-b border-[#d4d4d4] pb-2 mt-1 text-lg hover:text-indigo-500">
-                                <a href="{% url 'blog.home' %}?category=Immunization">
-                                    Immunization
-                                </a>
-                             
-                            </li>
-                        
+
+                            {% endfor %}
+                                                   
 
                       </ul>
                     </div>
