--- a/blog/templates/blog/create_blog.html
+++ b/blog/templates/blog/create_blog.html
@@ -38,6 +38,12 @@
                              </a>
                          </li>
                 {% endif %}
+                <li>
+                  <a href="{% url 'blog.appointment' %}" class="flex flex-row items-center h-12 transform hover:translate-x-2 transition-transform ease-in duration-200 text-gray-500 hover:text-gray-800">
+                             <span class="inline-flex items-center justify-center h-12 w-12 text-lg text-gray-400"><i class="bx bx-grid"></i></span>
+                             <span class="text-sm font-medium">My Appointments</span>
+                         </a>
+                     </li>
                    
                        
             {% if user.is_authenticated %}
