--- a/blog/templates/blog/profile.html
+++ b/blog/templates/blog/profile.html
@@ -37,13 +37,30 @@
                                     </a>
                                 </li>
                        {% endif %}
+                       {% if profile.category == 'patient' %}
+
+                       <li>
+                         <a href="{% url 'blog.blog' %}" class="flex flex-row items-center h-12 transform hover:translate-x-2 transition-transform ease-in duration-200 text-gray-500 hover:text-gray-800">
+                                    <span class="inline-flex items-center justify-center h-12 w-12 text-lg text-gray-400"><i class="bx bx-book"></i></span>
+                                    <span class="text-sm font-medium">Blogs</span>
+                                </a>
+                            </li>
+                           
+   
+                       {% endif %}
+                       <li>
+                        <a href="{% url 'blog.appointment' %}" class="flex flex-row items-center h-12 transform hover:translate-x-2 transition-transform ease-in duration-200 text-gray-500 hover:text-gray-800">
+                                   <span class="inline-flex items-center justify-center h-12 w-12 text-lg text-gray-400"><i class="bx bx-grid"></i></span>
+                                   <span class="text-sm font-medium">My Appointments</span>
+                               </a>
+                           </li>
                           
                               
                    {% if user.is_authenticated %}
                    <li>
                        <a href="{% url 'blog.profile' %}" class="flex flex-row items-center h-12 transform hover:translate-x-2 transition-transform ease-in duration-200 text-gray-500 hover:text-gray-800">
                                   <span class="inline-flex items-center justify-center h-12 w-12 text-lg text-gray-400"><i class="bx bx-user"></i></span>
-                                  <span class="text-sm font-medium">{{user.email}}</span>
+                                  <span class="text-sm font-medium">{{profile.username}}</span>
                               </a>
                           </li>
    
